<package>
  <name>sorting_patrol_MDP_irl</name>
  <version>1.0.0</version>
  <description>sorting_patrol_MDP_irl</description>
  <maintainer email="sa08751@uga.edu">Saurabh Arora</maintainer>

  <license>BSD</license>

  <author>Saurabh Arora</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>patroller_ctrl</run_depend>

  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>rosbag</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

</package>
